added README.md ready to put on the GitHubs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,46 @@
 *
-!.*
-!.*/
+!/.*
+!/.*/
+*.swp
+*~
+!README.cd
+
+.CFUserTextEncoding
+.DS_Store
+.Trash
+.Xauthority
+.anyconnect
+.bash_history
+.cache
+.config
+.cups
+.distlib
+.dropbox
+.eclipse_keyring
+.emacs.d
+.getmail
+.git
+.gitconfig
+.hydra
+.idlerc
+.inputrc
+.ipython
+.lesshst
+.lldb-history
+.macports
+.matplotlib
+.msgsrc
+.notecards.py.swp
+.npm
+.pip
+.profile.macports-saved_2014-01-29_at_19:03:10
+.python_history
+.rnd
+.sh_history
+.ssh
+.subversion
+.swp
+.videos
+.viminfo
+.vimrc
+
